# media

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  Taskfile.yaml  docker-compose.yaml  dprint.json  package-lock.json  package.json  rust-analyzer.toml  rustfmt.toml
.claude/agents/: backend-engineer.md  code-reviewer.md  devils-advocate.md  devops-engineer.md  docs-writer.md  planner.md  qa-engineer.md  security-engineer.md  system-architect.md
.claude/agents/planner/references/: examples.md  question-categories.md
.claude/agents/planner/templates/: PRD.md  TASKS.md
.claude/rules/: DEVELOPMENT.md  GIT_WORKFLOW.md  UBIQUITOUS_LANGUAGES.md
.claude/skills/develop/: SKILL.md
.claude/skills/develop/references/: workflow-details.md
.github/workflows/: ci.yaml
docs/: ARCHITECTURE.md  DEVELOPMENT.md  DOCUMENTATION.md  GIT_WORKFLOW.md  TESTING.md  UBIQUITOUS_LANGUAGES.md
docs/proposals/0001_image_management/: PRD.md  TASKS.md
documents/: GIT_WORKFLOW.md
migrations/: 0001_images.sql
resources/database/migrations/: 0001_images.sql
tests/: dummy.rs
