[workspace]
members = ["packages/foundation", "packages/api", "packages/processor"]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
foundation = { path = "packages/foundation" }

# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP framework
axum = "0.8"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "chrono"] }

# AWS SDK
aws-sdk-s3 = "1"
aws-sdk-sqs = "1"
aws-config = "1"

# CloudFront signing
cloudfront_sign = "0.4"

# Async trait support (needed for Arc<dyn Trait> with async methods)
async-trait = "0.1"

# Error handling
thiserror = "2"

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# ULID generation
ulid = { version = "1", features = ["serde"] }

# HTTP middleware
tower-http = { version = "0.6", features = ["cors", "trace"] }

# Regex
regex = "1"

# Testing
rstest = "0.26"
